# ot-release-metrics

./: .gitignore  .travis.yml  Dockerfile  README.md  app.py  config.toml  metrics.py  pyproject.toml  requirements.txt
.github/workflows/: artifact.yaml
.streamlit/: config.toml
compare-evidence-strings/: compare.sh  preprocess.py
config/: config.yaml
data/: 21.02-post.csv  21.02.csv  21.04.1-pre.csv  21.04.1.csv  21.04.2-post.csv  21.04.2-pre.csv  21.04.2.csv  21.04.3-post.csv  21.04.3-pre.csv  21.04.3.csv  21.04.4.csv  21.06.1.csv  21.06.2.csv  21.06.3-post.csv  21.06.3-pre.csv  21.06.3.csv  21.06.5-post.csv  21.06.5-pre.csv  21.06.5.csv  21.09.1-pre.csv  21.09.2-pre.csv  21.09.2.csv  21.09.5-pre.csv  21.09.5.csv  21.11.1-pre.csv  21.11.1.csv  21.11.2-pre.csv  21.11.2.csv  2104_1-metrics.csv  2104_1-pre-metrics.csv  22.02.1-pre.csv  22.02.2.csv  22.02.3.csv  22.02.4-pre.csv  22.02.4.csv  22.04.1-pre.csv  22.04.2-pre.csv  22.04.2.csv  22.04.3-pre.csv  22.04.3.csv  (+2 more)
data-expectations/: Makefile  gx_context_setup.py  gx_expectations_update.py  gx_runner.py  requirements.txt  utils.py
data-expectations/gx/: great_expectations.yml
docs/: building-docker-image.md  evidence-string-comparison.md  metric-calculation.md  metric-visualisation.md
gold-standard/: mesh_mappings.tsv
gx/: gx_runner.py  gx_setup.py  utils.py
metric-calculation/: Dockerfile  requirements.txt
src/: initialise_cluster.sh  utils.py
src/compare_evidence_strings/: preprocess.py
src/metric-calculation/: utils.py
streamlit-app/: Dockerfile  app.py  requirements.txt
(+11 files in other folders)
