[project]
name = "ot-release-metrics"
version = "0.1.0"
description = "Streamlit dashboard for Open Targets release metrics"
requires-python = ">=3.10"
dependencies = [
    "gcsfs>=2022.7.1",
    "huggingface-hub>=0.24.5",
    "pandas>=1.3.4",
    "Pillow>=10.0.0",
    "plotly-express>=0.4.1",
    "streamlit>=1.28.1",
]
